[package]
name = "myipis"
version = "0.1.0"
authors = ["Galen Guyer <galen@galenguyer.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.2.0"
actix-files = "0.4.0"
actix-session = "0.4.0"
actix-utils = "2.0.0"
env_logger = "0.8.1"
